# university-planner

./: .gitignore  README.md
backend/: Cargo.toml  docker-compose.yml
backend/src/: auth.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
